# ConSeqUMIDocker

./: Dockerfile  README.md  config.py  environment.yml  pyproject.toml
src/ConSeqUMIDocker/: BenchmarkTabWindow.py  ConsensusTabWindow.py  MainWindow.py  TabWindow.py  TableWindow.py  UmiTabWindow.py  gui.py
src/ConSeqUMIDocker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
